# autoware_mini_practice

./: LICENSE  README.md
common/: CMakeLists.txt  package.xml
common/data/bags/: 2022-04-14-11-07-45_test_tiksoja_radar_only_rainy_clipped.bag  2023-05-18-14-26-36_sensors_tfl_bot_aed_with_set_dest.bag  ride_14_minimal.bag
common/data/trajectories/: test.csv  waypoints_1m.csv
practice_1/: CMakeLists.txt  README.md  package.xml
practice_1/launch/: practice_1.launch
practice_1/nodes/: publisher.py
practice_2/: CMakeLists.txt  README.md  package.xml
practice_2/launch/: practice_2.launch
practice_2/nodes/planning/: waypoint_saver.py
practice_3/: CMakeLists.txt  README.md  package.xml
practice_3/config/: localization.yaml  planning.yaml  vehicle.yaml
practice_3/launch/: practice_2.launch  practice_3.launch
practice_3/nodes/localization/: localizer.py
practice_3/nodes/planning/waypoints/: waypoint_saver.py
practice_3/rviz/: practice_2.rviz  practice_3.rviz
practice_4/: CMakeLists.txt  README.md  package.xml
practice_4/config/: planning.yaml
practice_4/nodes/planning/visualization/: lanelet2_map_visualizer.py
practice_4/nodes/planning/waypoints/: waypoint_loader.py
practice_4/nodes/platform/simulation/: bicycle_simulation.py
practice_4/rviz/: practice_3.rviz  practice_4.rviz
