<?xml version="1.0"?>
<package format="2">
  <name>practice_2</name>
  <version>0.0.1</version>
  <description>The practice_2 package</description>
  <maintainer email="edgar@ut.ee">edgar</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>

  <build_export_depend>rospy</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>csv</exec_depend>
  <exec_depend>math</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>python3-pyproj</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>novatel_oem7_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

</package>
